--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
             <p class="info-text">Click to Open</p>
         </section>
         
-        <div id="card"><h4>💘little coder💘</h4>
+        <div id="card"><h4>💘Đạt 09💘</h4>
 
             <img src="Anh Dat.png"
             class="Dat">
 
-        <h4>Happy Birthday Make A Wish. Dear brother, hope you receive everything you wish for this year. You deserve the best! Thanks for being such a great brother.💘</h4></div>
+        <h4>Anh Đạt Như Cái Quần Qè</h4></div>
 
 
 
